//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table configuration_attribute {
  id String [pk]
  name String [unique, not null]
  value String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table user {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  UserAuthorizationProvider user_authorization_provider [not null]
  UserRole UserRole[] [not null]
  TeamUser team_user [not null]
  UserProfile user_profile
}

Table user_profile {
  id String [pk]
  firstName String
  lastName String
  avatar String
  userId String [unique, not null]
  User user [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table authorization_provider {
  id String [pk]
  clientId String
  associationClaimType String [not null]
  tokenUrl String
  secret String
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  UserAuthorizationProvider user_authorization_provider [not null]
}

Table user_authorization_provider {
  id String [pk]
  authorizationProviderId String [not null]
  userId String [not null]
  email String [unique, not null]
  appleUserCode String
  deviceUuid String
  password String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  AuthorizationProvider authorization_provider [not null]
  User user [not null]
}

Table team {
  id String [pk]
  name String [unique, not null]
  teamScreenId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  TeamUser team_user [not null]
  TeamScreen team_screen
}

Table team_user {
  id String [pk]
  teamId String [not null]
  userId String [not null]
  Team team [not null]
  User user [not null]
  TeamPermission team_permission
  teamPermissionId String
}

Table team_permission {
  id String [pk]
  name String [unique, not null]
  value String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  TeamUser team_user [not null]
}

Table team_screen {
  id String [pk]
  name String [unique, not null]
  description String
  icon String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  Team team [not null]
}

Enum UserRole {
  USER
  ADMIN
}

Ref: user_profile.userId - user.id

Ref: user_authorization_provider.authorizationProviderId > authorization_provider.id

Ref: user_authorization_provider.userId > user.id

Ref: team.teamScreenId > team_screen.id

Ref: team_user.teamId > team.id

Ref: team_user.userId > user.id

Ref: team_user.teamPermissionId > team_permission.id